@startuml

entity Register{
    hotelInformation
    adminInformation
}

entity Hotel {
  desc
  saleState
  position
}

entity Room {
  desc
  chargeType
  saleState
  restriction
}


entity Plan{
    desc
    rooms : [Room]
    saleType
    saleState
    salePeriod
    preSalePeriod
    stayPeriod
    stock
    startSale()
    stopSale()
}

Register -> Hotel : register
Hotel -> Plan : have
Hotel --> Room : have
Plan --> Room : have


@enduml
